# gitquick

./: CHANGELOG.md  Cargo.toml
.github/workflows/: release.yml
src/: add.rs  checkout.rs  commit.rs  config.rs  git_operations.rs  log.rs  main.rs  rebase.rs  revert.rs
