[package]
name = "gitquick"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Command line tool that simplifies common git workflows."
homepage = "https://www.gitquick.dev/"
repository = "https://github.com/Gerixmus/gitquick"
readme = "README.md"

[[bin]]
name = "gq"
path = "src/main.rs"

[dependencies]
inquire = "0.7.5"
git2 = "0.20.0"
serde = { version= "1.0.217", features = ["derive"] }
toml = "0.8.20"
directories = "6.0.0"
clap =  { version = "4.5.30", features = ["derive"] }
regex = "1.11.1"
crossterm = "0.29.0"

[profile.release]
panic = "abort"
strip = "debuginfo"
lto = true
codegen-units = 1